syntax = "proto3";

package user.api.user.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "validate/validate.proto";


option go_package = "github.com/goxiaoy/go-saas-kit/user/api/user/v1;v1";

service UserService{
  rpc ListUsers(ListUsersRequest)returns(ListUsersResponse){
    option (google.api.http) = {
      get: "/v1/users"
    };
  }
  rpc CreateUser(CreateUserRequest) returns(CreateUserResponse){
    option (google.api.http) = {
      post: "/v1/users"
      body:"*"
    };
  }
  rpc UpdateUser(UpdateUserRequest) returns(UpdateUserResponse){
    option (google.api.http) = {
      put: "/v1/users/{id}"
      body: "*"
    };
  }
  rpc DeleteUser(DeleteUserRequest) returns(DeleteUserResponse){
    option (google.api.http) = {
      delete: "/v1/users/{id}"
    };
  }
}

message UserFilter{
  repeated string gender_in=2;

  google.protobuf.Timestamp birthday_gte=3;
  google.protobuf.Timestamp birthday_lte=4;

  RoleFilter roles =5;

//  repeated UserFilter and =7;
//  repeated UserFilter or =8;

}

message RoleFilter{
  repeated string id_in=1;
  repeated string name_in =2;
}

message ListRolesRequest{
  int32 page_offset =1;
  int32 page_size = 2;
  string search = 3;
  repeated string sort =4;
  google.protobuf.FieldMask fields=5;
  RoleFilter filter =6;
}


message ListUsersRequest{
  int32 page_offset =1;
  int32 page_size = 2;
  string search = 3;
  repeated string sort =4;
  google.protobuf.FieldMask fields=5;
  UserFilter filter =6;
}

message User{
  string  id=1;
  google.protobuf.StringValue username =2;
  google.protobuf.StringValue name=3;
  google.protobuf.StringValue phone =4;
  google.protobuf.StringValue email=5;
  google.protobuf.Timestamp birthday=6;
  //
  Gender gender=7;
  repeated Role roles=8;
}

message Role{
  string  id=1;
  string name =2;
}

message ListUsersResponse{
  int64 total_size =1;
  int64 filter_size =2;

  repeated User items = 3;

}
message CreateUserRequest{
    google.protobuf.StringValue username =1 [(validate.rules).string.min_len = 1];
    google.protobuf.StringValue name=2;
    google.protobuf.StringValue phone =3;
    google.protobuf.StringValue email=4 [(validate.rules).string.email = true];

    string password=5;
    string confirm_password=6;
    google.protobuf.Timestamp birthday=7;
    //
    Gender gender=8;
}

enum Gender{
  MALE =0;
  FEMALE =1;
  OTHER=2;
}
message CreateUserResponse{
  string  id=1;
  google.protobuf.StringValue username =2;
  google.protobuf.StringValue name=3;
  google.protobuf.StringValue phone =4;
  google.protobuf.StringValue email=5;
  google.protobuf.Timestamp birthday=6;
  //
  Gender gender=7;
}
message UpdateUserRequest{
  string id =1;

  google.protobuf.StringValue username =2;
  google.protobuf.StringValue name=3;
  google.protobuf.StringValue phone =4;
  google.protobuf.StringValue email=5;
  google.protobuf.Timestamp birthday=6;
  //
  Gender gender=7;
}
message UpdateUserResponse{
  string id =1;

  google.protobuf.StringValue username =2;
  google.protobuf.StringValue name=3;
  google.protobuf.StringValue phone =4;
  google.protobuf.StringValue email=5;
  google.protobuf.Timestamp birthday=6;
  //
  Gender gender=7;
}
message DeleteUserRequest{
  string id =1;
}
message DeleteUserResponse{

}